google ads implemented

--- a/TrainApi/app/src/main/AndroidManifest.xml
+++ b/TrainApi/app/src/main/AndroidManifest.xml
@@ -26,6 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5407774234677570~9625481027"/>
+
+    </application>
 </manifest>
+
+<!--
+dummy:
+real: ca-app-pub-5407774234677570~9625481027
+-->
