reward_ads implemented

--- a/TrainApi/app/src/main/AndroidManifest.xml
+++ b/TrainApi/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 </manifest>
 
 <!--
-dummy:
+dummy:ca-app-pub-3940256099942544~3347511713
+real: ca-app-pub-5407774234677570~9625481027
 real: ca-app-pub-5407774234677570~9625481027
 -->
