real ads implemented

--- a/TrainApi/app/src/main/AndroidManifest.xml
+++ b/TrainApi/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,18 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        </activity> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-5407774234677570~9625481027"/>
-
+            android:value="ca-app-pub-5407774234677570~9625481027" />
     </application>
-</manifest>
 
-<!--
-dummy:ca-app-pub-3940256099942544~3347511713
-real: ca-app-pub-5407774234677570~9625481027
-real: ca-app-pub-5407774234677570~9625481027
--->
+</manifest>
